fix email overflow on phone screen

--- a/src/components/now_what/Now_what.module.css
+++ b/src/components/now_what/Now_what.module.css
@@ -31,3 +31,7 @@
     width: 70%;
     height: auto;
 }
+
+.email {
+    font-size: 1.6rem;
+}
